<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add Class"
        android:textSize="24sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/class_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="class_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/professor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="professor_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="337dp"
        android:layout_height="wrap_content">

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="93dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/MON_check"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="selectItem"
            android:text="@string/Mon" />

        <CheckBox
            android:id="@+id/TUE_check"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="selectItem"
            android:text="@string/Tue" />

        <CheckBox
            android:id="@+id/WED_check"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="selectItem"
            android:text="@string/Wed" />

        <CheckBox
            android:id="@+id/THU_check"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="selectItem"
            android:text="@string/Thu" />

        <CheckBox
            android:id="@+id/FRI_check"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="selectItem"
            android:text="@string/Fri" />

        <CheckBox
            android:id="@+id/SAT_check"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="selectItem"
            android:text="@string/Sat" />

        <CheckBox
            android:id="@+id/SUN_check"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="selectItem"
            android:text="@string/Sun" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_timepicker2"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:onClick="showAlarmDialog"
            android:text="시간설정"
            app:srcCompat="@drawable/round_access_alarm_24" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/final_result"
                android:layout_width="109dp"
                android:layout_height="50dp"
                android:text="record day" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/savebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onsaveclicked"
            android:text="save class" />

        <Button
            android:id="@+id/deletebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="ondeleteclicked"
            android:text="reset class" />

    </LinearLayout>


</LinearLayout>